[software] Add new software `LightingEstimation`

--- a/src/software/utils/CMakeLists.txt
+++ b/src/software/utils/CMakeLists.txt
@@ -171,3 +171,17 @@ alicevision_add_software(aliceVision_utils_split360Images
         ${OPENIMAGEIO_LIBRARIES}
         ${Boost_LIBRARIES}
 )
+
+# Lighting estimation from picture, albedo and geometry
+alicevision_add_software(aliceVision_utils_lightingEstimation
+  SOURCE main_lightingEstimation.cpp
+  FOLDER ${FOLDER_SOFTWARE_UTILS}
+  LINKS aliceVision_system
+        aliceVision_numeric
+        aliceVision_sfmData
+        aliceVision_sfmDataIO
+        aliceVision_mvsUtils
+        aliceVision_image
+        aliceVision_lightingEstimation
+        ${Boost_LIBRARIES}
+)
